--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -3,13 +3,13 @@
 <head>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../../../../styles/bootstrap.css">
-    <link rel="stylesheet" href="../../../../styles/siteIcons.css">
-    <link rel="stylesheet" href="../../../../styles/appStyle.css">
-    <link rel="stylesheet" href="../../../../styles/helper.css">
+    <link rel="stylesheet" href="../../../../../styles/bootstrap.css">
+    <link rel="stylesheet" href="../../../../../styles/siteIcons.css">
+    <link rel="stylesheet" href="../../../../../styles/appStyle.css">
+    <link rel="stylesheet" href="../../../../../styles/helper.css">
     
     <!-- jQuery -->
-	<script src="../../../../scripts/jquery/jquery-1.11.2.min.js"></script>    
+	<script src="../../../../../scripts/jquery/jquery-1.11.2.min.js"></script>
 
     <!-- Meta -->
 	<meta charset="utf-8">
