--- a/widget/templates/layouts/feeds-2.html
+++ b/widget/templates/layouts/feeds-2.html
@@ -3,10 +3,10 @@
 <head>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../../../../styles/bootstrap.css">
-    <link rel="stylesheet" href="../../../../styles/siteIcons.css">
-    <link rel="stylesheet" href="../../../../styles/appStyle.css">
-    <link rel="stylesheet" href="../../../../styles/helper.css">
+    <link rel="stylesheet" href="../../../../../styles/bootstrap.css">
+    <link rel="stylesheet" href="../../../../../styles/siteIcons.css">
+    <link rel="stylesheet" href="../../../../../styles/appStyle.css">
+    <link rel="stylesheet" href="../../../../../styles/helper.css">
     
     <!-- Meta -->
 	<meta charset="utf-8">
