--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -3,15 +3,15 @@
 <head>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../../../../styles/bootstrap.css">
-    <link rel="stylesheet" href="../../../../styles/siteIcons.css">
-    <link rel="stylesheet" href="../../../../styles/appStyle.css">
-    <link rel="stylesheet" href="../../../../styles/helper.css">
+    <link rel="stylesheet" href="../../../../../styles/bootstrap.css">
+    <link rel="stylesheet" href="../../../../../styles/siteIcons.css">
+    <link rel="stylesheet" href="../../../../../styles/appStyle.css">
+    <link rel="stylesheet" href="../../../../../styles/helper.css">
     
 	<!-- jQuery & Owl Carousel -->
-	<script src="../../../../scripts/jquery/jquery-1.11.2.min.js"></script>    
-	<script src="../../../../scripts/owlCarousel/owlCarousel.js"></script>
-    <link rel="stylesheet" href="../../../../scripts/owlCarousel/owlCarousel.css">
+	<script src="../../../../../scripts/jquery/jquery-1.11.2.min.js"></script>
+	<script src="../../../../../scripts/owlCarousel/owlCarousel.js"></script>
+    <link rel="stylesheet" href="../../../../../scripts/owlCarousel/owlCarousel.css">
 
     <!-- Meta -->
 	<meta charset="utf-8">
