Routes implemented in Content

--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -112,7 +112,7 @@
             </ul>
         </div>
         <div class="col-md-4 pull-right">
-            <a class="btn btn-success pull-right stretch">Add New Item</a>
+            <a class="btn btn-success pull-right stretch" href="#/media">Add New Item</a>
         </div>
     </div>
 </div>
