Location service added

--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -89,61 +89,13 @@
     </div>
     <div class="main col-md-9 pull-right">
         <div class="col-md-4 row">
-            <a class="btn btn-success stretch">Add Link</a>
+            <a class="btn btn-success stretch" ng-click="ContentMedia.openAddLinkPopup()">Add Link</a>
         </div>
     </div>
 </div>
 <hr class="none">
 <div class="item clearfix">
     <div class="draggable-list-view wide-list has-btn links-list">
-        <div class="d-item double-line square-icon clearfix">
-            <span class="icon icon-menu pull-left"></span>
-            <div class="media-holder pull-left">
-                <img src="http://www.placehold.it/50x50">
-            </div>
-            <div class="copy pull-right">
-                <div class="col-md-4 padding-zero pull-left">
-                    <a class="text-primary"><span class="title ellipsis pull-left">Item Name Item Name Item Name</span></a>
-                    <span class="title ellipsis pull-left">Item Summary Item Summary Item Summary</span>
-                </div>
-                <div class="col-md-7 padding-right-zero pull-left">
-                    <span class="content ellipsis">http://www.thelinkgoeshereandifitslongitwillwraparound</span>
-                </div>
-                <span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"></span>
-            </div>
-        </div>
-        <div class="d-item double-line square-icon clearfix">
-            <span class="icon icon-menu pull-left"></span>
-            <div class="media-holder pull-left">
-                <img src="http://www.placehold.it/50x50">
-            </div>
-            <div class="copy pull-right">
-                <div class="col-md-4 padding-zero pull-left">
-                    <a class="text-primary"><span class="title ellipsis pull-left">Item Name Item Name Item Name</span></a>
-                    <span class="title ellipsis pull-left">Item Summary Item Summary Item Summary</span>
-                </div>
-                <div class="col-md-7 padding-right-zero pull-left">
-                    <span class="content ellipsis">http://www.thelinkgoeshereandifitslongitwillwraparound</span>
-                </div>
-                <span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"></span>
-            </div>
-        </div>
-        <div class="d-item double-line square-icon clearfix">
-            <span class="icon icon-menu pull-left"></span>
-            <div class="media-holder pull-left">
-                <img src="http://www.placehold.it/50x50">
-            </div>
-            <div class="copy pull-right">
-                <div class="col-md-4 padding-zero pull-left">
-                    <a class="text-primary"><span class="title ellipsis pull-left">Item Name Item Name Item Name</span></a>
-                    <span class="title ellipsis pull-left">Item Summary Item Summary Item Summary</span>
-                </div>
-                <div class="col-md-7 padding-right-zero pull-left">
-                    <span class="content ellipsis">http://www.thelinkgoeshereandifitslongitwillwraparound</span>
-                </div>
-                <span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"></span>
-            </div>
-        </div>
         <div class="d-item double-line square-icon clearfix">
             <span class="icon icon-menu pull-left"></span>
             <div class="media-holder pull-left">
