--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -28,13 +28,13 @@
 <hr class="none">
 <div class="item clearfix row">
     <div class="labels col-md-3 padding-right-zero pull-left">
-        <span>Text</span>
+        <span>Body Content</span>
     </div>
 </div>
 <hr class="none">
 <div class="item clearfix row">
     <div class="main col-md-12 pull-right">
-        <textarea class="form-control" placeholder="WYSIWYG" ng-model="ContentMedia.item.data.body"></textarea>
+        <textarea class="form-control" placeholder="WYSIWYG" ui-tinymce="ContentMedia.bodyContentWYSIWYGOptions"  ng-model="ContentMedia.item.data.body"></textarea>
     </div>
 </div>
 <hr class="none">
