--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -19,6 +19,15 @@
 <hr class="none">
 <div class="item clearfix row">
     <div class="labels col-md-3 padding-right-zero pull-left">
+        <span>Title</span>
+    </div>
+    <div class="main col-md-9 pull-right">
+        <input type="text" class="form-control" placeholder="Item Title" ng-model="ContentMedia.item.data.title">
+    </div>
+</div>
+<hr class="none">
+<div class="item clearfix row">
+    <div class="labels col-md-3 padding-right-zero pull-left">
         <span>Summary</span>
     </div>
     <div class="main col-md-9 pull-right">
