--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -118,7 +118,7 @@
                 <div class="col-md-7 padding-right-zero pull-left">
                     <span class="content ellipsis">http://www.thelinkgoeshereandifitslongitwillwraparound</span>
                 </div>
-                <span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"></span>
+                <span class="btn-icon btn-delete-icon btn-danger transition-third" ng-click="ContentMedia.removeLink($index)"></span>
             </div>
         </div>
     </div>
