BF-015: Edit Link

--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -112,7 +112,7 @@
             </div>
             <div class="copy pull-right">
                 <div class="col-md-4 padding-zero pull-left">
-                    <a class="text-primary" href="link.url"><span class="title ellipsis pull-left">{{link.title}}</span></a>
+                    <a class="text-primary" ng-click="ContentMedia.openEditLinkPopup(link,$index)"><span class="title ellipsis pull-left">{{link.title}}</span></a>
                     <span class="title ellipsis pull-left">Item Summary Item Summary Item Summary</span>
                 </div>
                 <div class="col-md-7 padding-right-zero pull-left">
