--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -104,9 +104,9 @@
 </div>
 <hr class="none">
 <div class="item clearfix">
-    <div class="draggable-list-view wide-list has-btn links-list">
+    <div class="draggable-list-view wide-list has-btn links-list" ui-sortable="ContentMedia.linksSortableOptions" ng-model="ContentMedia.item.data.links">
         <div class="d-item double-line square-icon clearfix" ng-repeat="link in ContentMedia.item.data.links">
-            <span class="icon icon-menu pull-left"></span>
+            <span class="icon icon-menu pull-left handle"></span>
             <div class="media-holder pull-left">
                 <img src="http://www.placehold.it/50x50">
             </div>
