Removed extra link's field from media.html

--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -113,12 +113,12 @@
             <div class="copy pull-right">
                 <div class="col-md-4 padding-zero pull-left">
                     <a class="text-primary" ng-click="ContentMedia.openEditLinkPopup(link,$index)"><span class="title ellipsis pull-left">{{link.title}}</span></a>
-                    <span class="title ellipsis pull-left">Item Summary Item Summary Item Summary</span>
+                    <!--<span class="title ellipsis pull-left">Item Summary Item Summary Item Summary</span>-->
                 </div>
-                <div class="col-md-7 padding-right-zero pull-left">
+                <!--<div class="col-md-7 padding-right-zero pull-left">
                     <span class="content ellipsis">http://www.thelinkgoeshereandifitslongitwillwraparound</span>
-                </div>
-                <span class="btn-icon btn-delete-icon btn-danger transition-third" ng-click="ContentMedia.removeLink($index)"></span>
+                </div>-->
+                <span class="btn-icon btn-delete-icon btn-danger transition-third pull-right" ng-click="ContentMedia.removeLink($index)"></span>
             </div>
         </div>
     </div>
