--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -36,13 +36,13 @@
 <hr>
 <div class="item clearfix row">
     <div class="labels col-md-3 padding-right-zero pull-left">
-        <span>Text</span>
+        <span>Body</span>
     </div>
 </div>
 <hr class="none">
 <div class="item clearfix row">
     <div class="main col-md-12 pull-right">
-        <textarea class="form-control" placeholder="WYSIWYG"></textarea>
+        <textarea class="form-control" placeholder="WYSIWYG" ui-tinymce="ContentHome.bodyWYSIWYGOptions"  ng-model="ContentHome.info.data.content.descriptionHTML"></textarea>
     </div>
 </div>
 <hr>
