--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -109,7 +109,7 @@
                 <img src="http://www.placehold.it/50x50">
             </div>
             <div class="copy pull-right">
-                <a class="text-primary"><span class="title ellipsis pull-left">Item Name</span></a>
+                <a class="text-primary"  href="#/media/123456"><span class="title ellipsis pull-left">Item Name</span></a>
                 <span class="title ellipsis pull-left">Item Summary</span>
 
                 <div class="pull-right">
