BF-012: Add background image functionality

--- a/control/design/templates/home.html
+++ b/control/design/templates/home.html
@@ -28,7 +28,7 @@
             <div class="screen layouticon pull-left">
                 <a class="border-grey border-radius-three default-background-hover text-center">
                     <img
-                            ng-src="assets/images/{{DesignHome.mediaInfo.data.design.itemLayout}}.png" />
+                            ng-src="assets/images/{{DesignHome.mediaInfo.data.design.itemLayout }}.png" />
                 </a>
             </div>
             <div class="screen layoutgrid pull-right margin-left-zero border-grey border-radius-three">
@@ -39,7 +39,7 @@
         </div>
     </div>
 </div>
-<!--
+
 <hr>
 <div class="item row clearfix margin-top-thirty">
     <div class="labels col-md-3 padding-right-zero pull-left">
@@ -48,15 +48,18 @@
     <div class="main col-md-9 pull-right">
         <div class="screens clearfix">
             <div class="screen text-center layouticon pull-left">
-                <a class="border-grey border-radius-three default-background-hover text-center" onclick="alert('Open Media Library');">
-                    <span class="add-icon hidden">+</span>
-                    <img src="http://www.placehold.it/133x101">
+                <a class="border-grey border-radius-three default-background-hover" ng-click="DesignHome.addBackgroundImage()">
+                    <span class="add-icon" ng-hide="DesignHome.peopleInfo.design.backgroundImage">+</span>
+                    <img
+                            ng-show="DesignHome.mediaInfo.data.design.backgroundImage" ng-src="{{DesignHome.mediaInfo.data.design.backgroundImage | resizeImage : 80 :106}}">
+
                 </a>
-                <label class="secondary">750x1334</label>
+                <span class="icon btn-icon btn-delete-icon btn-danger btn-close transition-third" ng-click="DesignHome.removeBackgroundImage()"></span>
             </div>
         </div>
     </div>
 </div>
+<!--
 <hr>
 <h4>Manual Item Entry Details Design</h4><br>
 <div class="item row clearfix">
