BF-010: Pagination bug fixing, Load more disable

--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -95,7 +95,7 @@
     <div id="scroll-infinite"
          class="tab-order draggable-list-view wide-list has-btn-link border-grey border-radius-four">
         <div infinite-scroll-distance="1"
-             infinite-scroll="ContentHome.getmore()"
+             infinite-scroll="ContentHome.getMore()"
              infinite-scroll-disabled="ContentHome.noMore"
              infinite-scroll-container="'#scroll-infinite'">
             <div ui-sortable="ContentHome.itemSortableOptions" ng-model="ContentHome.items">
