--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -8,9 +8,8 @@
             </div>
         </div>
         <div class="text-left padded padding-bottom-zero clearfix ">
-            <h4 class="margin-top-zero">This is an Item Title</h4>
-            <h5 class="margin-bottom-zero">This is a summary. This is a summary. This is a summary. This is a
-                summary.</h5>
+            <h4 class="margin-top-zero">{{WidgetMedia.item.data.title}}</h4>
+            <h5 class="margin-bottom-zero">{{WidgetMedia.item.data.summary}}</h5>
         </div>
         <div class="padded padding-top-zero">
             <hr class="small">
@@ -21,11 +20,7 @@
                 <a class="text-primary">Share</a>
             </div>
             <hr class="small">
-            <p>This is the WYSIWYG Editor.<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p ng-if="WidgetMedia.item.data.body" ng-bind-html="WidgetMedia.item.data.body | safeHtml"></p>
 
             <div class="dynamic-links">
                 <a class="d-link">Dynamic Link</a>
