--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -4,7 +4,7 @@
              style="background:url(http://www.placehold.it/400x400.jpg) no-repeat; background-position:center center; background-size:cover;">
             <div class="people-bg padding-top-fifteen padding-bottom-fifteen clearfix">
                 <div class="people-holder clearfix">
-                    <div class="people-media text-center">
+                    <div class="people-media text-center" ng-if="WidgetMedia.item.data.topImage">
                         <!--<img src="http://www.placehold.it/250x400.jpg">-->
                         <img ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 250 : 400}}">
                     </div>
