--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -16,7 +16,7 @@
         <div class="text-left padded padding-bottom-zero clearfix">
             <p>This is the WYSIWYG Editor. This is the WYSIWYG Editor. This is the WYSIWYG Editor. This is the WYSIWYG
                 Editor. This is the WYSIWYG Editor. This is the WYSIWYG Editor. This is the WYSIWYG Editor. This is the
-                WYSIWYG Editor.</p</p>
+                WYSIWYG Editor.</p>
         </div>
         <div class="padded padding-top-zero">
             <div class="list-layout">
