--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -13,30 +13,17 @@
         <div class="padded padding-top-zero">
             <div class="list-layout">
                 <div class="row">
-                    <div class="list-item col-xs-6 pull-left">
+                    <div class="list-item col-xs-6 pull-left" ng-repeat="item in WidgetHome.items">
                         <div class="list-item-media text-center border-radius-three overflow-hidden">
                             <div class="list-media-holder">
-                                <img src="http://www.placehold.it/240x160">
+                                <img err-src="http://www.placehold.it/240x160" ng-src="{{item.data.topImage | resizeImage:240:160}}">
                             </div>
                         </div>
                         <div class="list-item-copy text-left">
-                            <p class="ellipsis margin-zero"><a class="text-primary">This is a title</a></p>
+                            <p class="ellipsis margin-zero"><a class="text-primary">{{item.data.title}}</a></p>
 
-                            <p class="summary ellipsis margin-zero">Here is where the summary goes</p>
-                            <span class="list-item-date">Dec 21, 2014</span>
-                        </div>
-                    </div>
-                    <div class="list-item col-xs-6 pull-left">
-                        <div class="list-item-media text-center border-radius-three overflow-hidden">
-                            <div class="list-media-holder play-btn">
-                                <img src="http://www.placehold.it/240x160">
-                            </div>
-                        </div>
-                        <div class="list-item-copy text-left">
-                            <p class="ellipsis margin-zero"><a class="text-primary">This is a title</a></p>
-
-                            <p class="summary ellipsis margin-zero">Here is where the summary goes</p>
-                            <span class="list-item-date">Dec 21, 2014</span>
+                            <p class="summary ellipsis margin-zero">{{item.data.summary}}</p>
+                            <span class="list-item-date">{{item.data.dateCreated  | jsDate | date:"MMMM dd, yyyy"}}</span>
                         </div>
                     </div>
                 </div>
